web-service/components/css/DayBox.module.css
.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 15px;
  width: 300px;
  height: 450px;
}

.today > .box {
  border-color: var(--brand-primary);
}

.dayName {
  color: var(--ui-header-color);
  font-size: x-large;
  font-weight: bold;
  letter-spacing: 1px;
  margin: 0;
}

.break {
  width: 60%;
  height: 1px;
  background: var(--ui-divider-color);
}

.box {
  display: flex;
  flex-direction: column;
  justify-content: top;
  align-items: center;
  z-index: 20;
  width: 100%;
  height: 80%;
  border: 10px solid transparent;
  border-radius: 25px;

  background: var(--ui-day-box-color);
  /* box-shadow: 17px 17px 32px #d9d9d9, -17px -17px 32px #ffffff; */
  box-shadow: 17px 17px 32px #00000025, -17px -17px 32px #00000009;
}

.date {
  color: var(--ui-text-not-important);
  font-weight: 500;
}

.menuList {
  display: flex;
  /* justify-content: center; */
  flex-direction: column;
  gap: 1em;
  /* text-align: center; */
  width: calc(100% - 20px);
  list-style-type: none;
  padding: 0;
}

.menuListItem {
  overflow-wrap: normal;
}

.diet {
  position: relative;
  background: var(--brand-primary);
  margin-left: .5em;
  border-radius: 10px;

  padding: 1px 4px 1px 4px;
  font-size: small;
  font-weight: bold;
  color: white;
  user-select: none;
  cursor: pointer;
}

.diet:hover .dietTooltip {
  transform: translateX(-50%) scale(1);
  transition: transform 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.dietTooltip {
  position: absolute;
  top: -40px;
  left: 50%;
  transform: translateX(-50%) scale(0);
  padding: 10px;
  border-radius: 10px;
  background: var(--ui-tooltip-bg);
  user-select: none;

  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.075);

  transition: transform 100ms linear;
}

@media (prefers-color-scheme: dark) {
  .today .box {
    box-shadow: 1px 1px 30px var(--ui-today-box-glow);
  }
}

